# CLIdat

./: .gitignore  LICENSE.md  README.md  mypy.ini  pyproject.toml  setup.cfg
src/clidat/: auth.py  commands.py  main.py  meta.py
src/clidat/commands/: accounting.py  platform.py
src/clidat/tui/: viewer.py
